--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -477,6 +477,7 @@ a.btn
 
 .field
   position: relative
+  z-index: 0
   box-sizing: border-box
   border: 1px solid $passive
   border-radius: 4px
